# tuper

./: .gitignore  .gitmodules  README.md
bringups/: FOLLOWER_bringup.sh  LEADER_1_bringup.sh  LEADER_2_bringup.sh
docker/: Dockerfile  custom_bashrc.sh  run_container.sh
docs/: installation.md  running_the_code.md  tuper_foxglove.json
everything_bag_with_gps/: metadata.yaml
formation_controller/: CMakeLists.txt  package.xml
formation_controller/config/: formation_shape.yaml  overall_params.yaml  pid_params.yaml
formation_controller/include/formation_controller/: formation_shape_broadcaster.hpp  fuse_distance_triangulation.hpp  relative_target_position_publisher.hpp  relative_tf_listener.hpp  thrust_cmd_relay.hpp  utils.hpp
formation_controller/launch/: agent_bringup.launch.py  pid_servers.launch.py  relay_nodes.launch.py  setup.launch.py
formation_controller/src/: formation_shape_broadcaster.cpp  fuse_distance_triangulation.cpp  get_differential_value.cpp  gps_heading_to_tf.cpp  ground_truth_tf2.cpp  origin_pub.cpp  pid.cpp  pid_server.cpp  relative_target_position_publisher.cpp  relative_tf_listener.cpp  string_stamped_processing.cpp  tf_repub.cpp  thrust_cmd_relay.cpp  thrust_vector_horizontal_relay.cpp  thrust_vector_relay.cpp
formation_controller/tmp/: filter.py  follower.launch.xml  leader_motion.cpp  leader_motion.launch.xml  params.yaml  pid_params.yaml  pid_servers.launch.py
mqtt_msg_converter/: CMakeLists.txt
mqtt_msg_converter/config/: mqtt_msg_converter.yaml
mqtt_msg_converter/launch/: mqtt_msg_converter.launch.py
mqtt_msg_converter/src/: int32_to_float32.cpp  string_to_navsatfix.cpp
path_planner/: center_path.csv  package.xml  setup.py
path_planner/config/: center_path.csv  follower_offset.yaml  follower_path.csv  leader1_offset.yaml  leader1_path.csv  leader2_offset.yaml  leader2_path.csv  path.yaml
path_planner/launch/: csv_tf_broadcaster.launch.py  generate_lead_path.launch.py  generate_offset_path.launch.py  visualize_paths.launch.py
path_planner/path_planner/: csv_tf_broadcaster.py  generate_lead_path.py  generate_offset_path.py  utils.py  visualize_paths.py
position_filter/: package.xml  setup.cfg  setup.py
position_filter/position_filter/: draft.py  filter.py
sam_btcpp/: CMakeLists.txt  backup.xml  package.xml
sam_btcpp/behavior_trees/: follower.xml  leaders_motion.xml  sam_btcpp.btproj
sam_btcpp/include/sam_btcpp/: publish_rpm.hpp  publish_thrust_vector.hpp
sam_btcpp/launch/: generate_tree_node_model.launch.py  leaders_motion.launch.py  tuper_bringup.launch.py
sam_btcpp/src/: generate_tree_node_model.cpp  main.cpp
sam_thruster_relay/: CMakeLists.txt  package.xml
sam_thruster_relay/config/: relay_params.yaml
sam_thruster_relay/include/sam_thruster_relay/: thrust_vector_horizontal_relay.hpp  thrust_vector_relay.hpp
sam_thruster_relay/launch/: relay_nodes.launch.py
sam_thruster_relay/src/: thrust_cmd_relay.cpp  thrust_vector_horizontal_relay.cpp  thrust_vector_relay.cpp
tuper_interfaces/: CMakeLists.txt
tuper_sim_utils/: CMakeLists.txt  package.xml
tuper_sim_utils/src/: ping_synchronizer.cpp  string_stamped_processing.cpp
