<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>formation_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luc001@e.ntu.edu.sg">lucvt001</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>smarc_msgs</depend>
  <depend>sam_msgs</depend>
  <depend>tuper_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
